--- a/ui/log_analyzer.ui
+++ b/ui/log_analyzer.ui
@@ -123,27 +123,17 @@
      <string>&lt;-- BACK</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="save">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>420</y>
-      <width>111</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Save as JSON</string>
-    </property>
-   </widget>
    <widget class="QTableWidget" name="counter">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>250</x>
       <y>430</y>
-      <width>251</width>
+      <width>211</width>
       <height>121</height>
      </rect>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAlwaysOff</enum>
     </property>
     <column>
      <property name="text">
