--- a/ui/passui.ui
+++ b/ui/passui.ui
@@ -20,7 +20,7 @@
       <x>40</x>
       <y>50</y>
       <width>221</width>
-      <height>20</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
@@ -29,8 +29,8 @@
      <rect>
       <x>270</x>
       <y>50</y>
-      <width>75</width>
-      <height>23</height>
+      <width>91</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -40,10 +40,10 @@
    <widget class="QPushButton" name="AddNew">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>90</y>
-      <width>100</width>
-      <height>30</height>
+      <x>20</x>
+      <y>300</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -59,10 +59,10 @@
    <widget class="QPushButton" name="Update">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>130</y>
-      <width>100</width>
-      <height>30</height>
+      <x>160</x>
+      <y>300</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -78,10 +78,10 @@
    <widget class="QPushButton" name="Delete">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>170</y>
-      <width>100</width>
-      <height>30</height>
+      <x>300</x>
+      <y>300</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -97,10 +97,10 @@
    <widget class="QPushButton" name="GenerateRan">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>210</y>
-      <width>100</width>
-      <height>30</height>
+      <x>440</x>
+      <y>300</y>
+      <width>131</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="text">
@@ -136,8 +136,8 @@
      <rect>
       <x>40</x>
       <y>90</y>
-      <width>361</width>
-      <height>192</height>
+      <width>521</width>
+      <height>201</height>
      </rect>
     </property>
     <property name="verticalScrollBarPolicy">
@@ -161,8 +161,14 @@
     <property name="showGrid">
      <bool>false</bool>
     </property>
+    <attribute name="horizontalHeaderCascadingSectionResizes">
+     <bool>true</bool>
+    </attribute>
     <attribute name="horizontalHeaderDefaultSectionSize">
      <number>119</number>
+    </attribute>
+    <attribute name="horizontalHeaderStretchLastSection">
+     <bool>true</bool>
     </attribute>
     <column>
      <property name="text">
@@ -191,7 +197,7 @@
     <property name="geometry">
      <rect>
       <x>410</x>
-      <y>10</y>
+      <y>30</y>
       <width>141</width>
       <height>21</height>
      </rect>
@@ -209,7 +215,7 @@
     <property name="geometry">
      <rect>
       <x>410</x>
-      <y>30</y>
+      <y>50</y>
       <width>111</width>
       <height>16</height>
      </rect>
@@ -225,7 +231,7 @@
     <property name="geometry">
      <rect>
       <x>410</x>
-      <y>50</y>
+      <y>70</y>
       <width>111</width>
       <height>16</height>
      </rect>
